<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/darker_gray"
    tools:context="br.com.pmtsouza.mymovies.activities.MovieDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/general_placeholder"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:padding="2dp">
        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:contentDescription="@string/moviedetails_poster_hint" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/white_alpha">

            <TextView
                android:id="@+id/movie_year_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_year"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_year_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_year_title"
                android:layout_toEndOf="@+id/movie_year_title"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_rated_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_year_title"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_rated"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_rated_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_rated_title"
                android:layout_toEndOf="@+id/movie_rated_title"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_released_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_rated_title"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_released"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_released_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_released_title"
                android:layout_toEndOf="@+id/movie_released_title"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_runtime_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_released_title"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_runtime"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_runtime_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_runtime_title"
                android:layout_toEndOf="@+id/movie_runtime_title"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_genre_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_runtime_title"
                android:text="@string/moviedetails_genre"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_genre_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_genre_title"
                android:layout_toEndOf="@+id/movie_genre_title"
                android:layout_marginBottom="5dp"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_director_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_genre_value"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_director"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_director_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_director_title"
                android:layout_toEndOf="@+id/movie_director_title"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_writer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_director_title"
                android:text="@string/moviedetails_writer"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_writer_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_writer_title"
                android:layout_toEndOf="@+id/movie_writer_title"
                android:layout_marginBottom="5dp"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_actors_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_writer_value"
                android:text="@string/moviedetails_actors"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_actors_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_actors_title"
                android:layout_toEndOf="@+id/movie_actors_title"
                android:layout_marginBottom="5dp"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_language_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_actors_value"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_language"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_language_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_language_title"
                android:layout_toEndOf="@+id/movie_language_title"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_country_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_language_title"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_country"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_country_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_country_title"
                android:layout_toEndOf="@+id/movie_country_title"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_metascore_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_country_title"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_metascore"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_metascore_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_metascore_title"
                android:layout_toEndOf="@+id/movie_metascore_title"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_imdbrating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_metascore_title"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_imdbrating"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_imdbrating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/movie_imdbrating_title"
                android:layout_toEndOf="@+id/movie_imdbrating_title"
                android:text="@string/general_placeholder" />

            <TextView
                android:id="@+id/movie_plot_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_imdbrating_title"
                android:layout_marginBottom="5dp"
                android:text="@string/moviedetails_plot"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_plot_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_plot_title"
                android:text="@string/general_placeholder"/>
        </RelativeLayout>

    </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
